// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#diffImages alphaBackground 1`] = `
{
  "height": 300,
  "pixels": 0,
  "score": 0,
  "scoreRaw": 0,
  "width": 1400,
}
`;

exports[`#diffImages boxShadow 1`] = `
{
  "height": 300,
  "pixels": 0,
  "score": 0,
  "scoreRaw": 0,
  "width": 250,
}
`;

exports[`#diffImages imageCompression 1`] = `
{
  "height": 665,
  "pixels": 0,
  "score": 0,
  "scoreRaw": 0,
  "width": 327,
}
`;

exports[`#diffImages simple with enough fuzz 1`] = `
{
  "height": 1146,
  "pixels": 0,
  "score": 0,
  "scoreRaw": 0,
  "width": 1425,
}
`;
